--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     'assets/TACF21.jpeg',
                     'assets/TACF22.jpeg',
                     'assets/TACF23.jpeg',
-                    'assets/TACF24.jpeg
+                    'assets/TACF24.jpeg'
                 ];
                 
                 this.init();
