--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 
                 // Sample images - replace with your actual image URLs
                 this.images = [
-                    'assets/TACF00.jpeg',
+                    'assets/TACF00.jpg',
                     'assets/TACF01.jpeg',
                     'assets/TACF02.jpeg',
                     'assets/TACF03.jpeg',
